更新手写结果promise

--- a/src/otherDemo/手写结果/电脑结果.md
+++ b/src/otherDemo/手写结果/电脑结果.md
@@ -1,3 +1,6 @@
+## 一、promise 源码 1
+
+```js
 let promiseCount = 1
 //完整的实现 测试Demo
 class Promise {
@@ -56,12 +59,11 @@ class Promise {
     this.callbacks.forEach((callback) => this._handle(callback)) // [Promise-3]没有callbacks
   }
 }
+```
 
-/**
- *  promise测试
- *
- */
+## 二、运行案例
 
+```js
 new Promise((resolve) => {
   setTimeout(() => {
     resolve(100)
@@ -77,3 +79,60 @@ new Promise((resolve) => {
   .then((res) => {
     console.log(res) // 400
   })
+```
+
+## 三、运行结果
+
+```js
+[Running] node "/Users/apple/Documents/toy-promise/src/otherDemo/demo1.js"
+[Promse-1]:constructor
+[Promse-1]:then
+[Promse-2]:constructor
+[Promse-1]:\_handle state= pending
+[Promse-1]:\_handle callbacks= [
+{
+onFulfilled: [Function (anonymous)],
+resolve: [Function: bound _resolve]
+}
+]
+[Promse-2]:then
+[Promse-3]:constructor
+[Promse-2]:\_handle state= pending
+[Promse-2]:\_handle callbacks= [
+{
+onFulfilled: [Function (anonymous)],
+resolve: [Function: bound _resolve]
+}
+]
+[Promse-1]:\_resolve
+[Promse-1]:\_resolve value= 100
+[Promse-1]:\_handle state= fulfilled
+[Promse-4]:constructor
+[Promse-2]:\_resolve
+[Promse-2]:\_resolve value= Promise {
+callbacks: [],
+name: 'Promse-4',
+state: 'pending',
+value: null
+}
+[Promse-4]:then
+[Promse-5]:constructor
+[Promse-4]:\_handle state= pending
+[Promse-4]:\_handle callbacks= [
+{
+onFulfilled: [Function: bound _resolve],
+resolve: [Function: bound _resolve]
+}
+]
+[Promse-4]:\_resolve
+[Promse-4]:\_resolve value= 400
+[Promse-4]:\_handle state= fulfilled
+[Promse-2]:\_resolve
+[Promse-2]:\_resolve value= 400
+[Promse-2]:\_handle state= fulfilled
+400
+[Promse-3]:\_resolve
+[Promse-3]:\_resolve value= undefined
+[Promse-5]:\_resolve
+[Promse-5]:\_resolve value= undefined
+```
